# Virtual_assisted_mail

./: README.md
Voice-Based-Mail/: README.md  db.sqbpro  db.sqlite3  manage.py  playsound-1.3.0-py3-none-any.whl  pyproject.toml  render.yaml  requirements.txt
Voice-Based-Mail/client/: docreader.py  docxreader.py  draftcheck.py  forms.py  models.py  try.py  urls.py  views.py
Voice-Based-Mail/client/migrations/: 0001_initial.py  0002_draftemail.py
Voice-Based-Mail/client/templates/client/: compose.html  draft.html  inbox.html  login.html  options.html  register.html  sent.html  trash.html
Voice-Based-Mail/templates/: base_layout.html
Voice-Based-Mail/vmail/: asgi.py  settings.py  urls.py  wsgi.py
