[tool.poetry]
name = "voice-based-mail"
version = "0.1.0"
description = "voice mail"
authors = ["Akash"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
django-crispy-forms = "^2.0"
djangorestframework = "^3.14.0"
sqlparse = "^0.4.3"
gTTS = "^2.3.1"
SpeechRecognition = "^3.8.1"
playsound = "==1.2.2"
pyaudio = "^0.2.13"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
